Fix: Fixing drawer and modal is blurry when open in chrome-based browser

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,6 +37,18 @@
   }
 }
 
+@layer mantine {
+  .mantine-Drawer-content,
+  .mantine-Drawer-root,
+  .mantine-Modal-content,
+  .mantine-Modal-root,
+  .mantine-VaulRoot-content,
+  .mantine-VaulRoot-body,
+  .mantine-VaulRoot-footer {
+    will-change: initial !important;
+  }
+}
+
 @config "../../tailwind.config.ts";
 
 @utility container {
